--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
 
     <header>
-      <form>
-        <input type="text" id="lname" name="lname" placeholder="Search..." />
-        <input type="submit" value="Search" />
+      <form id="form">
+        <input class="input" id="input" type="text" placeholder="Search..." />
+        <input class="submit" type="submit" value="Search" />
       </form>
     </header>
 
