--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
       <form id="form">
-        <input class="input" id="input" type="text" placeholder="Search..." />
+        <input class="search" type="text" placeholder="Search..." />
         <input class="submit" type="submit" value="Search" />
       </form>
     </header>
