work in progress

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </nav>
 
     <header>
-      <form id="form">
-        <input class="search" type="text" placeholder="Search..." />
-        <input class="submit" type="submit" value="Search" />
+      <form id="form" autocomplete="off">
+        <input type="text" id="search" placeholder="Search" />
+        <input class="submit" type="submit" />
       </form>
     </header>
 
